# Rubiks-Cube-Solver

./: .gitignore  README.md
src/cpp/: CMakeLists.txt  RubiksCube.cpp  RubiksCube.h  RubiksCubePy.cpp  RubiksCubeTest.cpp  Util.h  main.cpp
src/cpp/test_data/: 0.txt  F.txt  FFF.txt  FFFR.txt  FFFRBBB.txt
src/py/: cubeConstantsGenerator.py  training.py
